--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mtn-momo",
-  "version": "0.2.0",
+  "name": "@mikashboks/mtn-momo",
+  "version": "0.3.0",
   "description": "MTN Mobile Money API Client for NodeJS written in TypeScript",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "clean": "rm -r lib",
+    "clean": "rm -r ./dist",
     "compile": "tsc -p tsconfig.json",
     "lint": "tslint --project tsconfig.json --config tslint.json \"{src,test}/**/*.ts\"",
-    "test": "NODE_ENV=test nyc mocha"
+    "test": "mocha -r ts-node/register 'test/**/*.ts'"
   },
   "nyc": {
     "extension": [
@@ -36,38 +36,33 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "commander": "^2.19.0",
-    "uuid": "^8.3.2"
+    "axios": "^1.5.0",
+    "commander": "^11.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^6.1.3",
-    "@semantic-release/git": "^4.0.2",
-    "@types/bluebird": "^3.5.24",
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/mocha": "^5.2.5",
-    "@types/sinon": "^7.0.4",
-    "@types/uuid": "^8.3.0",
-    "axios-mock-adapter": "^1.16.0",
-    "bluebird": "^3.5.3",
-    "chai": "^4.2.0",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@types/chai": "^4.3.6",
+    "@types/chai-as-promised": "^7.1.6",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^16.11.12",
+    "@types/sinon": "^10.0.16",
+    "@types/uuid": "^9.0.4",
+    "axios-mock-adapter": "^1.22.0",
+    "chai": "^4.3.8",
     "chai-as-promised": "^7.1.1",
-    "coveralls": "^3.0.2",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^0.14.3",
-    "mocha": "^5.2.0",
+    "coveralls": "^3.1.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.3",
+    "mocha": "^9.1.3",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^14.1.1",
-    "semantic-release": "^19.0.3",
-    "sinon": "^7.2.3",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
-  },
-  "directories": {
-    "lib": "lib"
+    "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
+    "sinon": "^12.0.1",
+    "ts-node": "^10.4.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.5.3"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
